--- a/gradle.properties
+++ b/gradle.properties
@@ -11,5 +11,5 @@ halplibe_version=3.4.14
 
 # Mod
 mod_version=1.0.0
-mod_group=turniplabs
-mod_name=examplemod
+mod_group=Mizuri-n
+mod_name=Shield mod
