--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,15 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.1-pre1a
+bta_version=7.1-pre2a
 
 # Loader
 loader_version=0.14.19-babric.3-bta
 
 # HalpLibe
-halplibe_version=3.4.14
+halplibe_version=3.4.15
 
 # Mod
 mod_version=1.0.0
 mod_group=Mizuri-n
-mod_name=Shield mod
+mod_name=Better with Defense
