--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,8 @@ loader_version=0.14.19-babric.3-bta
 # HalpLibe
 halplibe_version=3.5.1
 
+prismatic_version=3.0.3-7.1
+
 # Mod
 mod_version=1.0.2
 mod_group=Mizuri-n
