--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,14 @@ repositories {
 		url = 'https://maven.fabricmc.net/'
 	}
 	ivy {
+		url = "https://github.com/UselessSolutions"
+		patternLayout {
+			artifact "[organisation]/releases/download/v[revision]/[module]-[revision].jar"
+			m2compatible = true
+		}
+		metadataSources { artifact() }
+	}
+	ivy {
 		url = "https://github.com/Better-than-Adventure"
 		patternLayout {
 			artifact "[organisation]/releases/download/v[revision]/[module].jar"
@@ -84,6 +92,8 @@ dependencies {
 	// Helper library
 	// If you do not need Halplibe you can comment this line out or delete this line
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
+
+	modImplementation "BTA_Babric_PrismaticLibe:prismaticlibe:${project.prismatic_version}"
 
 	modImplementation "ModMenu:ModMenu:2.0.4"
 
