--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.1-pre2a
+bta_version=7.1
 
 # Loader
 loader_version=0.14.19-babric.3-bta
 
 # HalpLibe
-halplibe_version=3.5.1
+halplibe_version=3.5.2
 
 prismatic_version=3.0.3-7.1
 
 # Mod
-mod_version=1.0.3
+mod_version=1.0.4
 mod_group=Mizuri-n
 mod_name=Better with Defense
