--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.1
+bta_version=7.1_01
 
 # Loader
-loader_version=0.15.6-babric.4-bta
+loader_version=0.15.6-babric.5-bta
 
 # HalpLibe
-halplibe_version=3.5.3
+halplibe_version=3.5.4
 
 prismatic_version=3.1.2-7.1
 
 # Mod
-mod_version=1.0.4
+mod_version=1.0.5
 mod_group=Mizuri-n
 mod_name=Better with Defense
