--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,17 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.1_01
+bta_version=7.2-pre1
 
 # Loader
-loader_version=0.15.6-babric.5-bta
+loader_version=0.15.6-babric.6-bta
 
 # HalpLibe
-halplibe_version=3.5.4
+halplibe_version=4.0.6
 
 prismatic_version=3.1.2-7.1
 
 # Mod
-mod_version=1.0.6
+mod_version=1.0.7
 mod_group=Mizuri-n
 mod_name=Better with Defense
