--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,13 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.2-pre1
+bta_version=7.2_01
 
 # Loader
 loader_version=0.15.6-babric.6-bta
 
 # HalpLibe
-halplibe_version=4.0.6
-
-prismatic_version=3.1.2-7.1
+halplibe_version=4.1.3
 
 # Mod
 mod_version=1.0.7
