--- a/build.gradle
+++ b/build.gradle
@@ -98,6 +98,8 @@ dependencies {
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
 
+	implementation("io.github.llamalad7:mixinextras-common:0.5.0-beta.3")
+
 	implementation 'com.google.guava:guava:30.0-jre'
 	implementation group: 'com.google.code.gson', name: 'gson', version: '2.10.1'
 	var log4jVersion = "2.20.0"
