--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.2_01
+bta_version=7.2
 
 # Loader
 loader_version=0.15.6-babric.6-bta
@@ -10,6 +10,6 @@ loader_version=0.15.6-babric.6-bta
 halplibe_version=4.1.3
 
 # Mod
-mod_version=1.0.7
+mod_version=1.0.8
 mod_group=Mizuri-n
 mod_name=Better with Defense
