--- a/build.gradle
+++ b/build.gradle
@@ -102,7 +102,8 @@ dependencies {
 	modImplementation "com.github.Turnip-Labs:bta-halplibe:${project.halplibe_version}"
 
 	modImplementation "ModMenu:ModMenu:2.0.6"
-	implementation("BTANoNameDyes:noname_dyes:1.3")
+	modImplementation("BTANoNameDyes:noname_dyes:1.3")
+	modImplementation "TerrainAPI:terrainapi:${project.terrain_api_version}"
 
 	implementation "org.slf4j:slf4j-api:1.8.0-beta4"
 	implementation "org.apache.logging.log4j:log4j-slf4j18-impl:2.16.0"
