--- a/gradle.properties
+++ b/gradle.properties
@@ -8,6 +8,7 @@ loader_version=0.15.6-babric.6-bta
 
 # HalpLibe
 halplibe_version=4.1.3
+terrain_api_version=1.4.4-7.2-pre1
 
 # Mod
 mod_version=1.0.8
