--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx2G
 
 # BTA
-bta_version=7.2_01
+bta_version=7.2
 
 # Loader
 loader_version=0.15.6-babric.6-bta
@@ -11,6 +11,6 @@ halplibe_version=4.1.3
 terrain_api_version=1.4.4-7.2-pre1
 
 # Mod
-mod_version=1.0.8
+mod_version=1.0.9
 mod_group=Mizuri-n
 mod_name=Better with Defense
