--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,6 @@ halplibe_version=4.1.3
 terrain_api_version=1.4.4-7.2-pre1
 
 # Mod
-mod_version=1.0.9
+mod_version=1.1.1
 mod_group=Mizuri-n
-mod_name=Better with Defense
+mod_name=Rin's Fortress
